[gd_scene load_steps=23 format=3 uid="uid://bn455ati1nc51"]

[ext_resource type="Script" uid="uid://nnt3ot06ory1" path="res://Card/Scripts/card_manager.gd" id="1_8g701"]
[ext_resource type="Script" uid="uid://332io6l006y" path="res://scripts/GameSetUp.gd" id="1_mt3dj"]
[ext_resource type="PackedScene" uid="uid://dc634hqn22010" path="res://Card/Scenes/cardSlot.tscn" id="2_mt3dj"]
[ext_resource type="Script" uid="uid://delv184a62mle" path="res://Card/Scripts/MagicCardSlot.gd" id="3_t8fev"]
[ext_resource type="Script" uid="uid://bp3lp7banymyb" path="res://Card/Scripts/PlayerHand.gd" id="4_ckasl"]
[ext_resource type="Script" uid="uid://brc2d6dp7e0u5" path="res://Card/Scripts/Deck.gd" id="5_8by1c"]
[ext_resource type="Texture2D" uid="uid://dw3mmuyhxxjyl" path="res://Card/Assets/Cards/BackOfCard.png" id="6_7g47n"]
[ext_resource type="Script" uid="uid://b1ne12tgvllrx" path="res://Card/Scripts/InputManager.gd" id="7_yn2xr"]
[ext_resource type="Script" uid="uid://drwe5fvs4r0v3" path="res://Card/Scripts/BattleManager.gd" id="8_6gxx7"]
[ext_resource type="Script" uid="uid://cba3pgxtl4ncf" path="res://Card/Scripts/scan_deck.gd" id="9_8by1c"]
[ext_resource type="Texture2D" uid="uid://blu18nl6kxprl" path="res://Card/Assets/Cards/AddCard.png" id="9_ga3lq"]
[ext_resource type="Script" uid="uid://di5hkpjmclxrx" path="res://Card/Scripts/playerHealth.gd" id="10_ckasl"]
[ext_resource type="Script" uid="uid://ci4i4ho6l3ahw" path="res://Card/Scripts/playerEnergy.gd" id="10_t8fev"]
[ext_resource type="Script" uid="uid://c56whwoyarxrw" path="res://Card/Scripts/energy_bar.gd" id="14_7g47n"]
[ext_resource type="Script" uid="uid://c3amkebnncuhi" path="res://Card/Scripts/health_bar.gd" id="15_yn2xr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jb6x5"]
size = Vector2(314, 395)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8by1c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7g47n"]
bg_color = Color(0.00976477, 0.64485, 0.75495, 1)

[sub_resource type="Theme" id="Theme_yn2xr"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_8by1c")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_7g47n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yn2xr"]
bg_color = Color(0.739951, 0.705968, 0.721386, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6gxx7"]
bg_color = Color(0.6, 0.153957, 0.168759, 1)

[sub_resource type="Theme" id="Theme_jb6x5"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_yn2xr")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_6gxx7")

[node name="PlayerField" type="Node2D"]
script = ExtResource("1_mt3dj")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_8g701")

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot1" parent="CardSlots" instance=ExtResource("2_mt3dj")]
position = Vector2(678, 742)
scale = Vector2(0.4, 0.4)
script = ExtResource("3_t8fev")

[node name="CardSlot6" parent="CardSlots" instance=ExtResource("2_mt3dj")]
position = Vector2(960, 550)
scale = Vector2(0.4, 0.4)

[node name="CardSlot7" parent="CardSlots" instance=ExtResource("2_mt3dj")]
position = Vector2(820, 550)
scale = Vector2(0.4, 0.4)

[node name="CardSlot8" parent="CardSlots" instance=ExtResource("2_mt3dj")]
position = Vector2(680, 550)
scale = Vector2(0.4, 0.4)

[node name="CardSlot9" parent="CardSlots" instance=ExtResource("2_mt3dj")]
position = Vector2(1100, 550)
scale = Vector2(0.4, 0.4)

[node name="CardSlot10" parent="CardSlots" instance=ExtResource("2_mt3dj")]
position = Vector2(1240, 550)
scale = Vector2(0.4, 0.4)

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("4_ckasl")

[node name="Deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(143, 566)
scale = Vector2(0.6, 0.6)
script = ExtResource("5_8by1c")

[node name="Area2D" type="Area2D" parent="Deck"]
z_index = -3
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_jb6x5")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
texture = ExtResource("6_7g47n")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
z_index = 10
offset_left = -15.0
offset_top = 113.333
offset_right = 25.0
offset_bottom = 153.333
scale = Vector2(2, 2)
text = "0"

[node name="DeckTimer" type="Timer" parent="Deck"]

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("7_yn2xr")

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 158.0
offset_top = 714.0
offset_right = 236.0
offset_bottom = 745.0
disabled = true
text = "End Turn"

[node name="ScanDeck" type="Button" parent="."]
offset_left = 30.0
offset_top = 714.0
offset_right = 149.0
offset_bottom = 745.0
disabled = true
text = "ScanDeckCard"
script = ExtResource("9_8by1c")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("8_6gxx7")

[node name="BattleTimer" type="Timer" parent="."]

[node name="PlayerHealth" type="RichTextLabel" parent="."]
offset_left = 26.0
offset_top = 766.0
offset_right = 134.0
offset_bottom = 788.0
scale = Vector2(2, 2)
text = "0"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_ckasl")

[node name="PlayerEnergy" type="RichTextLabel" parent="."]
offset_left = 26.0
offset_top = 818.0
offset_right = 135.0
offset_bottom = 840.0
scale = Vector2(2, 2)
text = "0"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_t8fev")

[node name="PlayerDiscard" type="Node2D" parent="."]
position = Vector2(1500, 660)
scale = Vector2(0.4, 0.4)

[node name="Sprite2D" type="Sprite2D" parent="PlayerDiscard"]
texture = ExtResource("9_ga3lq")

[node name="EnergyBar" type="ProgressBar" parent="."]
z_index = -1
offset_left = 26.0
offset_top = 818.0
offset_right = 243.0
offset_bottom = 861.0
theme = SubResource("Theme_yn2xr")
max_value = 5.0
value = 5.0
show_percentage = false
script = ExtResource("14_7g47n")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = -1
offset_left = 26.0
offset_top = 766.0
offset_right = 243.0
offset_bottom = 809.0
theme = SubResource("Theme_jb6x5")
max_value = 20.0
value = 20.0
show_percentage = false
script = ExtResource("15_yn2xr")

[connection signal="pressed" from="EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="ScanDeck" to="ScanDeck" method="_on_pressed"]
